# AspireBook

./: .gitignore  Directory.Build.props  Directory.Packages.props  README.md  azure.yaml  dab-config.json  practical-aspire.sln
.github/workflows/: azure-dev.yml
DB Scripts/: warehousedb.sql
WarehouseAPI.Tests/: IntegrationTest1.cs  WarehouseAPI.Tests.csproj
dab/: dab-config.json
db-scripts/: warehousedb.sql
docs/: book-architecture.drawio
src/Aspire-Orchestration/Eshop.AppHost/: Eshop.AppHost.csproj  Program.cs
src/Aspire-Orchestration/Eshop.AppHost/Properties/: launchSettings.json
src/Aspire-Orchestration/Eshop.ServiceDefaults/: Eshop.ServiceDefaults.csproj
src/FrontendWithReact/frontend-react-app/: Dockerfile  default.conf.template  package-lock.json  package.json  webpack.config.js
src/FrontendWithReact/frontend-react-app/src/: index.html  index.js
src/FrontendWithReact/frontend-react-app/src/components/: App.js  Warehousestatus.js
src/WarehouseAPI/: Program.cs  WarehouseAPI.csproj  WarehouseAPI.http  WarehouseClient.cs  appsettings.json
src/WarehouseAPI/Controllers/: WarehouseController.cs
src/WarehouseAPI/Properties/: launchSettings.json
src/create-order-api/: Dockerfile  go.mod  go.sum  main.go  test.http
src/process-payment-api/: Dockerfile  pyproject.toml  test.http
src/process-payment-api/src/process_payment_api/: __init__.py
src/shipping-api/: Dockerfile  package-lock.json  package.json  test.http
src/shipping-api/src/: index.js
