[project]
name = "process-payment-api"
version = "0.1.0"
description = "Process Payment API project"
authors = [
    { name = "Tommaso Stocchi", email = "tstocchi@microsoft.com" }
]
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.6",
    "requests>=2.32.3",
    "uvicorn>=0.32.1",
]

[project.scripts]
process-payment-api = "process_payment_api:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
